@@ -6,10 +6,10 @@ usage() {
 
 start() {
   echo "Starting flamestream worker"
-  local java_ops="-Daeron.term.buffer.length=4194304 -Daeron.mtu.length=16384 -Xms1500m -Xmx1500m -XX:+PrintGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+HeapDumpOnOutOfMemoryError"
+  local java_ops="-Daeron.term.buffer.length=4194304 -Daeron.mtu.length=16384 -Xss16m -Xms500m -Xmx6000m -Xlog:gc,gc+cpu=info::utc -XX:+HeapDumpOnOutOfMemoryError"
   echo "java_ops=$java_ops"
   local main="com.spbsu.flamestream.runtime.WorkerApplication"
-  nohup bash -c "while :; do java $java_ops -cp lib/*:flamestream-runtime-1.0-SNAPSHOT.jar $main; done &>worker.log" &
+  nohup bash -c "java $java_ops -cp lib/*:flamestream-runtime-1.0-SNAPSHOT.jar $main &>worker.log" &
   local pid=$!
   echo "Pid=$pid"
   echo $pid > flamestream.pid
@@ -19,14 +19,14 @@ stop() {
   echo "Stopping flamestream worker"
   if [[ ! -f flamestream.pid ]]; then
     echo "No flamestream worker was found"
-    return 1
+    return 0
   fi
 
   # Kill the whole process group
   local pid=$(cat flamestream.pid)
   local pgid=$(ps -o pgid= $pid | grep -o [0-9]*)
   echo "Pid=${pid}, pgid=${pgid}"
-  kill -- "-$pgid"
+  kill -- "-$pgid" || :
 }
 
 main() {
